--- a/ST558_Project1.qmd
+++ b/ST558_Project1.qmd
@@ -76,22 +76,30 @@ PUMS20235Y
 -   Writing a **helper function** to take what is returned by GET() in the API query and making it into a tibble
 
 ```{r}
-#| eval: FALSE
+
+library(httr)
+library(jsonlite)
+library(tibble)
+library(stringr)
+
   URL_ids <- "https://api.census.gov/data/2023/acs/acs5/pums?get=SEX,PWGTP,MAR&for=state:1&SCHL=24"
   id_info <- httr::GET(URL_ids)
 
 create_tibble_helper <- function(id_info) {
   parsed <-fromJSON(rawToChar(id_info$content))
+  # obtain columns headers from first row
   return(as_tibble(parsed[-1, ], .name_repair = ~ parsed[1, ]))
 }
 
-create_tibble_helper(id_info)
+# test function: a tibble is created with helper function
+test_tibble1 <- create_tibble_helper(id_info)
+head(test_tibble1)
 ```
 
 -   Writing a **function to query the API with user-selected survey year** (default value of 2022), checking to ensure that the user-selected year is valid (between 2010 and 2022)
 
 ```{r}
-#| eval: FALSE
+
 
 # function that builds API URL with user input for year
 API_URL_builder <- function(year = 2022){
@@ -104,8 +112,12 @@ API_URL_builder <- function(year = 2022){
   return(API_URL)
 }
   
-API_URL_builder(2015)
+# test function: URLs for 2015 and 2021
+api_test_year1 <- API_URL_builder(2015)
+print(api_test_year1)
 
+api_test_year2 <- API_URL_builder(2021)
+print(api_test_year2)
 ```
 
 -   Updating the API function with **user-selected numerical variables** entered as a vector (user options: AGEP, GASP, GRPIP, JWAP (time), JWDP (time), and JWMNP; default values: AGEP, PWGTP; PWGTP always returned), checking to ensure that user-entered variables are valid
@@ -113,7 +125,6 @@ API_URL_builder(2015)
 -   Updating the API function with **user-selected categorical variables** entered as a vector (user options: FER, HHL, HISPEED, JWTRNS, SCH, SCHL, and SEX; default value: SEX), checking to ensure that user-entered variables are valid
 
 ```{r}
-#| eval: FALSE
 
 # function that builds API URL with user input for numeric variables
 
@@ -147,53 +158,30 @@ API_Year_NumericVar_Builder <- function(year = 2022,
   return(API_URL)
 }
 
-#API_Year_NumericVar_Builder(2015, numvars = c("AGEP","GASP","GRPIP"), catvars = c("FER", "HHL"))
+# test function - API URLs are created from user specified num vars and cat vars
+api_test_vars1 <- API_Year_NumericVar_Builder(2015, 
+                            numvars = c("AGEP","GRPIP"), 
+                            catvars = c("FER", "HHL"))
+print(api_test_vars1)
 
+# test function: if no numeric var is specified, the default is AGEP (and PWGTP is always returned)
+api_test_vars2 <- API_Year_NumericVar_Builder(2017,
+                            catvars= c("HISPEED"))
+
+print(api_test_vars2)
+
+# test function: if no categorical var is specified, the default is SEX
+api_test_vars3 <- API_Year_NumericVar_Builder(2016, 
+                            numvars = c("GASP", "JWAP"))
+
+print(api_test_vars3)
 ```
 
 -   Updating the API function with **user-selected geography levels** (user options: all, region, division, state; default value: all), checking to ensure that user-entered levels are valid
 
-```{r}
-#| eval: FALSE
-# function that builds API URL with user input for numeric variables
-API_Year_NumericVar_Builder <- function(year = 2022, 
-                                        numvars = "AGEP", 
-                                        catvars = "SEX"){
-      if ( year < 2010 | year > 2022 | year %% 1 != 0){
-     stop("Please enter a valid year between 2010 and 2022.")
-     #return(NA)
-      }
-      # add numeric and categorical variable user options
-      var_options <- c("AGEP","GASP","GRPIP","JWAP","JWDP","JWMNP","SEX", "FER", "HHL", "HISPEED", "JWTRNS", "SCH", "SCHL")
-      
-      #make sure all user choices are in allowed list of options
-      if (!all(numvars %in% var_options)) 
-        stop("Please enter a valid numeric variable.")
-      if (length(numvars) < 1) 
-        stop("Include at least one numeric variable besides PWGTP.")
-
-      numvars_comb <- paste(numvars, collapse = ",")
-      # add categorical variable user options
-      
-      #make sure all user choices are in allowed list of options
-      if (!all(catvars %in% var_options)) 
-        stop("Please enter a valid categorical variable.")
-      catvars_comb <- paste(catvars, collapse = ",")
-      
-  #numvars = c("AGEP", "GASP", "GRPIP", "JWAP", "JWDP", "JWMNP")
-  API_URL <- paste0("https://api.census.gov/data/", year, "/acs/acs1/pums?get=PWGTP,",numvars_comb,",",catvars_comb,"&for=state:1" )
-
-  return(API_URL)
-  
-}
-#API_Year_NumericVar_Builder(2015, numvars = c("AGEP","GASP","GRPIP"), catvars = c("FER", "HHL"))
-
-```
-
 -   Updating the API function with optional, **user-selected geographic subsetting** for specific regions, divisions, or states (user options for regions: 1 to 4, \*; default region value \*) (user options for divisions: 1 to 9, \*; default division value \*) (user options for states: 01 to 02, 04 to 06, 08 to 13, 15 to 42, 44 to 51, 53 to 56, \*; default state value 08 (Colorado)), checking for valid inputs and combinations of inputs
 
 ```{r}
-#| eval: FALSE
 # function that builds API URL with user input for year and numeric, categorical, and geographic variable options
 
 
@@ -204,7 +192,6 @@ API_URL_Builder <- function(year = 2022,
                             geo_subset = "08"){
       if ( year < 2010 | year > 2022 | year %% 1 != 0){
      stop("Please enter a valid year between 2010 and 2022.")
-     #return(NA)
       }
   
       # add numeric and categorical variable user options
@@ -264,11 +251,41 @@ if (missing(geo_subset) | length(geo_subset) == 0 | geo_subset == "") {
   
   return(API_URL)
 }
+
+# test function: user can specify region, division, or state
+api_test_geo1 <- API_URL_Builder(
+  year   = c(2022),
+  numvars = c("AGEP","GASP","GRPIP","JWMNP"),
+  catvars = c("JWAP", "JWDP","FER","HHL","HISPEED","JWTRNS","SCH","SCHL","SEX"),
+  geo_level = "region",
+  geo_subset = "2"
+)
+print(api_test_geo1)
+
+api_test_geo2 <- API_URL_Builder(
+  year   = c(2022),
+  numvars = c("AGEP","GASP","GRPIP","JWMNP"),
+  catvars = c("JWAP", "JWDP","FER","HHL","HISPEED","JWTRNS","SCH","SCHL","SEX"),
+  geo_level = "division",
+  geo_subset = "*"
+)
+print(api_test_geo2)
+
+
+# test function: outputs default of state 08 when no state is selected
+api_test_geo3 <- API_URL_Builder(
+  year   = c(2022),
+  numvars = c("AGEP","GASP","GRPIP","JWMNP"),
+  catvars = c("JWAP", "JWDP","FER","HHL","HISPEED","JWTRNS","SCH","SCHL","SEX"),
+  geo_level = "state",
+  geo_subset = ""
+)
+print(api_test_geo3)
 ```
 
 ### Finalizing the API Builder Function
 
-Finalizing our API builder involved the following two tasks:
+Finalizing our API builder involved the following three tasks:
 
 -   Writing an additional function largely based on functionality of the first function. The additional function, which we refer to as Multi-Year API Builder, allows **user specification of multiple years** of survey data entered as a vector in addition to all options enumerated above, calling above single-year function as needed and combining data into a single tibble with year variable added
 
@@ -556,7 +573,7 @@ For each year in the sequence, the multi-year function runs the single year API 
 The finalized Multi-Year API Builder can be run as follows:
 
 ```{r}
-# run it
+# test function: test multi year function to include multiple years, user-specified variables, and time variables formatted to middle of time ranges
 output_data <- MultiYear_API_Builder(
   years   = c(2021,2022),
   numvars = c("AGEP","GASP","GRPIP","JWMNP"),
@@ -565,7 +582,7 @@ output_data <- MultiYear_API_Builder(
   geo_subset = "08"
 )
 
-
+glimpse(output_data)
 
 ```
 
@@ -583,7 +600,7 @@ The purpose of the function is to summarize census-class tibbles. Numeric variab
 
 -   Cycle through numeric variables to calculate means and standard deviations (the numeric values representing NA but coded as integers - usually 0 - are filtered)
 
--   Cycle through categorical variables to calculate counts by factor levels
+-   Cycle through categorical variables to calculate counts by factor levels (for a selected categorical variable, NA values are filtered out and weights are summarized for each category)
 
 -   Store results in vectors and output results as a named list of vectors with named elements
 
@@ -664,11 +681,11 @@ summary.census <- function(output_data,
       names(sd_vector)[i] <- ("JWMNP")
     }
   }
+
   #______________________________________
-  #summary for time vars
-  
-  #______________________________________
-  # add cat var summary processing
+  # loop through cat vars to select user-selected cat var
+  # filter out NA values for selected catvar
+  # groups cat var by categories, and summarizes weights for each category  
   CatCounts <- lapply(catvars, function(catvar) {
     output_data |>
       select(all_of(catvar), PWGTP) |>
@@ -790,342 +807,4 @@ summary.census(output_data,
                  )
 
 plot.census(output_data, "JWMNP", "SEX")
-```
-
-# TO DELETE - copied to sections above
-
-## Summary
-
-## API Function Text
-
-(Text for API Function: can go just before the function, or can be broken up to go with individual build steps, whichever way we're documenting it)
-
-The purpose of the first function is to query the API with user-selected data, process and manipulate the data retrieved, and return it as a tibble. The function was constructed step-by-step as follows:
-
--   **Querying the API** with a given example URL using the usual process for querying an API
-
--   Writing a **helper function** to take what is returned by GET() in the API query and making it into a tibble
-
--   Writing a **function to query the API with user-selected survey year** (default value of 2022), checking to ensure that the user-selected year is valid (between 2010 and 2022)
-
--   Updating the API function with **user-selected numerical variables** entered as a vector (user options: AGEP, GASP, GRPIP, JWAP(time), JWDP (time), and JWMNP); default values: AGEP, PWGTP; PWGTP always returned), checking to ensure that user-entered variables are valid
-
--   Updating the API function with **user-selected categorical variables** entered as a vector (user options: FER, HHL, HISPEED, JWTRNS, SCH, SCHL, and SEX; default value: SEX), checking to ensure that user-entered variables are valid
-
--   Updating the API function with **user-selected geography levels** (user options: all, region, division, state; default value: all), checking to ensure that user-entered levels are valid
-
--   Updating the API function with optional, **user-selected geographic subsetting** for specific regions, divisions, or states (user options for regions: 1 to 4, \*; default region value \*) (user options for divisions: 1 to 9, \*; default division value \*) (user options for states: 01 to 02, 04 to 06, 08 to 13, 15 to 42, 44 to 51, 53 to 56, \*; default state value 08 (Colorado)), checking for valid inputs and combinations of inputs
-
--   Updating API function to **clean/wrangle the data set, assigning data types** of numerical, categorical, and time as appropriate, using PUMS metadata for parsing time
-
--   Writing an additional function allowing **user specification of multiple years** of survey data entered as a vector in addition to all options enumerated above, calling above single-year function as needed and combining data into a single tibble with year variable added
-
-## Generic Summary Function for Census Tibbles
-
-The purpose of the function is to summarize census-class tibbles. Numeric variables are summarized by means and standard deviations while categorical variables are summarized by counts of the factors. The function was constructed as follows:
-
--   Setting the function to take three arguments
-
--   Census-class tibble, like the ones generated by the API function above, checking to confirm a valid entry
-
--   Numeric variables to summarize, entered as a vector and checked for validity, with default being to summarize all numeric variables except PWGTP
-
--   Categorical vectors to summarize, entered as a vector and checked for validity, with default being to summarize all categorical variables
-
--   Cycle through numeric variables to calculate means and standard deviations
-
--   TIME?
-
--   Cycle through categorical variables to calculate counts by factor levels
-
--   Store results in vectors and output results as a named list of vectors with named elements
-
-## Generic Plot Function for Census Tibbles
-
-The purpose of the function is to plot census-class tibbles. User selects the census tibble, a numeric variable and categorical variable from the tibble from which to generate box plots. The box plot shows summaries for the selected numeric variable by factor level of the selected categorical variable. The function was constructed as follows:
-
--   Setting the function to take three user-selected arguments of census tibble, a numeric variable and a categorical variable, checking for validity of all inputs
-
--   Plot the data using boxplot from ggplot2 as given in project assignment
-
-# TO DELETE
-
-Summary The Multi-Year function, takes in a vectors of year(s), numeric variables, categorical variables, and the geographic level (including options specification for individual region, division, or state). For each year in the sequence, the function will run the single year API Builder to construct the API call for the desired year(s), numeric variables, categorical variables, and geographic levels. the results of each year are saved in a list. Helper functions create a tibble from the list, \_\_\_\_\_\_ Moving earlier work, we can decide if we want to delete this or keep anything.
-
-```{r}
-
-```
-
-## API Call
-
-Steps: - build URL - use httr:GET() to contact website - parse the JSON data using the fromJSON function from the jsonlite package. This reads JSON data from file path or character string and converts and simplifies to R object. - add data to a tibble
-
-### API Numeric Variables functionality
-
--   By default, return (1) AGEP (age) and PWGTP (weight).
--   *PWGTP must always be returned* \_ User options: AGEP, GASP, GRPIP, JWAP (time), JWDP (time), and JWMNP
--   PWGTP: weight (Persons weight, continuous variable)\
--   AGEP: Age
--   GASP: Gas cost (monthly cost, use ADJHSG to adjust GASP to constant dollars)
--   GRPIP: Gross rent as a percentage of household income past 12 months (percent)
--   JWAP (time): Time of arrival at work - hour and minute (coded 1-285 representing 4 minute increments)
--   JWDP (time): Time of departure for work - hour and minute (coded 1-150, representing 9 minute increments)
--   JWMP: Travel time to work (minutes, 1-200)
--   The function should turn variables into numeric values or time values (use the middle of the time period) where appropriate. ***Some variables are coded, e.g. time variables come in as codes as 4 and 9 minute increments. These will require processing at some point***
--   One numeric variable other than PWGTP must be returned *DOES AGEP COUNT HERE? see note in code below*
-
-```{r}
-#| eval: FALSE
-# function that builds API URL with user input for year and numeric variables
-
-
-API_Year_NumericVar_Builder <- function(year = 2022,...){
-      if ( year < 2010 | year > 2022 | year %% 1 != 0){
-     stop("Please enter a valid year between 2010 and 2022.")
-     #return(NA)
-   }
-      numvars <- c(...)
-      numvar_options <- c("AGEP","GASP","GRPIP","JWAP","JWDP","JWMNP")
-      
-      #define numvars as "AGEP" by default if no numerical variable was entered)
-  if (length(numvars) == 0) numvars <- "AGEP"
-      
-      #make sure all user choices are in allowed list of options
-      if (!all(numvars %in% numvar_options)) 
-        stop("Please enter a valid numeric variable.")
-  
-      #Note to self: I'm not sure if this is needed because AGEP is default. does AGEP suffice as the required numeric variable?
-      if (length(numvars) < 1) 
-        stop("Include at least one numeric variable besides PWGTP.")
-
-      numvars_comb <- paste(numvars, collapse = ",")
-      
-      
-  #numvars = c("AGEP", "GASP", "GRPIP", "JWAP", "JWDP", "JWMNP")
-  API_URL <- paste0("https://api.census.gov/data/", year, "/acs/acs1/pums?get=PWGTP,",numvars_comb,"&for=state:1" )
-
-  return(API_URL)
-  
-}
-# I can only get the call below to work when I enter the variables as a combined vector.
-API_Year_NumericVar_Builder(2015, "AGEP","GASP","GRPIP")
-#API_Year_NumericVar_Builder(2016)
-
-```
-
-### API Categorical Variables
-
-Specify the categorical variables to be returned (SEX as default). ∗ Options for the user should be FER, HHL, HISPEED, JWTRNS, SCH, SCHL, and SEX - FER: gave birth to child in last 12 months - HHL: household language - HISPEED: Broadband internet service - JWTRNS: Means of transportation to work - SCH: School enrollment - SCHL: Educational attainment - SEX: Sex; 1- Male, 2-Female ***Your function should turn variables into factors with appropriate levels, where appropriate*** ∗ One categorical variable must be returned – (Check that the variables asked for are in this set of variables)
-
-```{r}
-
-
-```
-
-### API Geography
-
-(Internal note: this includes all code from chunks above (minus the tibble builder). We can eventually delete the older chunks above, but for now they show my progression in building this function.)
-
-Geographic functionality for API_URL_Builder function. ∗ User specifies individual regions, division, or states, as well as all regions, divisions, or states. If user selection for region, division, or state subset is left blank, the default selection is all regions, all divisions, or state 08 (Colorado).
-
-```{r}
-
-
-
-
-```
-
-```         
-```
-
-### Multi-Year API Builder
-
-This function calls the single year function as many times as needed and combines the data into one final tibble (a year variable is included in this final tibble)
-
-```{r}
-#| eval: FALSE
-
-#___________________________
-# start single year function
-API_URL_Builder <- function(year = 2022, numvars = "AGEP", catvars = "SEX", geo_level = "state",geo_subset = "08"){
-      if ( year < 2010 | year > 2022 | year %% 1 != 0){
-     stop("Please enter a valid year between 2010 and 2022.")
-     #return(NA)
-      }
-  
-      # add numeric and categorical variable user options
-      var_options <- c("AGEP","GASP","GRPIP","JWAP","JWDP","JWMNP","SEX", "FER", "HHL", "HISPEED", "JWTRNS", "SCH", "SCHL")
-      
-      #make sure all user choices are in allowed list of options
-      if (!all(numvars %in% var_options)) 
-        stop("Please enter a valid numeric variable.")
-  
-      #Note to self: I'm not sure if this is needed because AGEP is default. does AGEP suffice as the required numeric variable?
-      if (length(numvars) < 1) 
-        stop("Include at least one numeric variable besides PWGTP.")
-
-      numvars_comb <- paste(numvars, collapse = ",")
-      
-      # add categorical variable user options
-      
-      #make sure all user choices are in allowed list of options
-      if (!all(catvars %in% var_options)) 
-        stop("Please enter a valid categorical variable.")
-      catvars_comb <- paste(catvars, collapse = ",")
-      
-      
-      # add Geographic user options
-      
-      # allowable region, division, and state codes
-      region_code_options <-c("1","2","3","4", "*")
-      division_code_options <- c("1","2","3","4","5","6","7","8","9", "*")
-      state_code_options <- c("01","49","21","26","29","32","34","08","51","39",
-                          "02","46","04","06","55","15","22","30","47","48",
-                          "09","50","53","17","20","35","36","10","11","12",
-                          "56","16","25","27","42","45","13","23","24","28",
-                          "37","41","05","19","31","33","44","54","18","38",
-                          "40", "*")
-                          #PR 72 not included
-      
-      #specify the geo_levels, with default of all
-      geo_level_options <- c("all", "region", "division", "state")
-      # Check that the value specified by the user is one of the above values
-      if (!all(geo_level %in% geo_level_options)) 
-        stop("Please enter a valid Geography.")
-      
-      # if geo_subset is missing, set defaults
-if (missing(geo_subset) | length(geo_subset) == 0 | geo_subset == "") {
-  if (geo_level == "state") geo_subset <- "08"
-  if (geo_level == "region") geo_subset <- "*"
-  if (geo_level == "division") geo_subset <- "*"
-}
-
-      # note to self: consider using && instead of &
-      if (geo_level == "region" && !geo_subset %in% region_code_options) {
-  stop("Not a valid Region code. Region code must be 1–4")
-      }
-      if (geo_level == "division" && !geo_subset %in% division_code_options) {
-  stop("Not a valid Division code. Division code must be 1–9")
-      }
-      if (geo_level == "state" && !geo_subset %in% state_code_options) {
-  stop("Not a valid State code")
-}
-     
-      # build URL
-  API_URL <- paste0("https://api.census.gov/data/", year, "/acs/acs1/pums?get=PWGTP,",numvars_comb,",",catvars_comb,"&for=",geo_level, ":", geo_subset)
-  
-  return(API_URL)
-  
-  
-}
-#_____________________________________________
-# start multi-year function
-MultiYear_API_Builder <- function(years, numvars = "AGEP", catvars = "SEX", geo_level = "state", geo_subset){
-    
-  # add the create tibble helper function
-    create_tibble_helper <- function(id_info) {
-  parsed <-fromJSON(rawToChar(id_info$content))
-  return(as_tibble(parsed[-1, ], .name_repair = ~ parsed[1, ]))
-    } 
- 
-  # create empty list to temporarily hold years results
-  result_list <- list()
-  
-   # use a for loop for each year in years, run the API_URL_Builder
-  for (i in seq_along(years)) {
-      y <- years[i]
-      
-    # use the loop to run/repeat the API URL Builder function   
-    url <- API_URL_Builder(y, numvars, catvars, geo_level, geo_subset)
-    id_info <- httr::GET(url)
-    df   <- create_tibble_helper(id_info)
-    df$year <- y
-    result_list[[i]] <- df
-    
-    }
-  
-  final <- dplyr::bind_rows(result_list)
-  class(final) <- c("census", class(final)) #make the tibble census-class
-  
-  #____________________________________________________________________________________
-  #wrangle data
-  
-  # numerical data
-  for (i in seq_along(final)) {
-    if (colnames(final)[i] == "PWGTP") {
-    final$PWGTP <- as.integer(final$PWGTP)
-    }
-    if (colnames(final)[i] == "AGEP") {
-      final$AGEP <- as.integer(final$AGEP)
-    }
-    if (colnames(final)[i] == "GASP") {
-      final$GASP <- as.integer(final$GASP)
-    }
-    if (colnames(final)[i] == "GRPIP") {
-      final$GRPIP <- as.integer(final$GRPIP)
-    }
-    if (colnames(final)[i] == "JWMNP") { #this one is number of minutes
-      final$JWMNP <- as.integer(final$JWMNP)
-    }
-  }
-  
-  # categorical data:
-  for (i in seq_along(final)) {
-    if (colnames(final)[i] == "FER") {
-    final$FER <- as.factor(final$FER)
-    }
-    if (colnames(final)[i] == "HHL") {
-      final$HHL <- as.factor(final$HHL)
-    }
-    if (colnames(final)[i] == "HISPEED") {
-      final$HISPEED <- as.factor(final$HISPEED)
-    }
-    if (colnames(final)[i] == "JWTRNS") {
-      final$JWTRNS <- as.factor(final$JWTRNS)
-    }
-    if (colnames(final)[i] == "SCH") {
-      final$SCH <- as.factor(final$SCH)
-    }
-    if (colnames(final)[i] == "SCHL") {
-      final$SCHL <- as.factor(final$SCHL)
-    }
-    if (colnames(final)[i] == "SEX") {
-      final$SEX <- as.factor(final$SEX)
-    }
-  }
-  
-  # time data - I spent a lot of time on this but didn't really get anywhere. The codes that correspond to the times are store as rownames and I couldn't fix it.
-  
-  #Parsing JWAP time data even after talking to dr post this isn't right. I emailed him again.
-#URL_JWAP <- "https://api.census.gov/data/2022/acs/acs1/pums/variables/JWAP.json"
-#WAP_key_raw <- httr::GET(URL_JWAP)
-
-#JWAP_key_char <- fromJSON(rawToChar(JWAP_key_raw$content))
-#JWAP_key <- dplyr::as_tibble(JWAP_key_char$values |> unlist()) #from prof
-#JWAP_key
-  
-#  Do WE NEED TO MAKE REGION INTO INTEGER?
-  
-  #____________________________________________________________________________________
-  return(final)
-  
-  }
-
-
-
-```
-
-```{r}
-#| eval: FALSE
-
-out <- MultiYear_API_Builder(
-  years    = c(2015, 2016),
-  numvars  = c("AGEP","GASP","GRPIP"),
-  catvars  = c("FER","HHL"),
-  geo_level = "region",
-  geo_subset = "2"
-)
-#view(out)
-
- 
 ```
